@@ -1,0 +1,8 @@
+ACTION!="add", GOTO="xorg_xkb_end"
+SUBSYSTEM!="input", GOTO="xorg_xkb_end"
+KERNEL!="event*", GOTO="xorg_xkb_end"
+
+# import keyboard layout from /etc/default/keyboard
+IMPORT{file}="/etc/default/keyboard"
+
+LABEL="xorg_xkb_end"
